@@ -1,3 +1,7 @@
+2011-05-20  Ken Brown  <kbrown@cornell.edu>
+
+	* gens_and_words.cc (getngens): Minor tweak to reading newline.
+
 2011-05-19  Ken Brown  <kbrown@cornell.edu>
 
 	* gens_and_words.cc (getnum): Remove.
